fix: hide overlay on small screens for improved responsiveness

--- a/src/app/(home)/home.module.scss
+++ b/src/app/(home)/home.module.scss
@@ -135,6 +135,9 @@
   transition: 0.5s ease;
   z-index: -1;
   border-radius: 0% 100px 100px 0%;
+  @include breakPointSmall(sd) {
+    display: none;
+  }
 }
 
 .imageContainer:hover .overlay {
